<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/btn_white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_broadcast_receiver"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@color/primary_blue"/>

    <EditText
        android:id="@+id/dialogActionInputAddBd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:maxLines="1"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/input_broadcast_action_example_1"
        android:background="@drawable/edit_bg_green"/>

    <EditText
        android:id="@+id/dialogFilterKeyInputAddBd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:maxLines="1"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_filter_example_1"
        android:background="@drawable/edit_bg_green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addBtnDialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/btn_accept"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:text="@string/add"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/cancelBtnDialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/btn_cancel"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>