<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back" />

    <View
        android:id="@+id/cutLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="50dp"
        android:background="@color/transients" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollViewFather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cutLine"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- setting block one -->
            <LinearLayout
                android:id="@+id/block_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9BCFBA"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <!-- ip -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ipEditSetting"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg_white"
                        android:gravity="center"
                        android:hint="@string/input_target_ip" />

                    <Button
                        android:id="@+id/ipConfirmBtnSetting"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/btn_normal"
                        android:text="@string/confirm"
                        android:textColor="@color/white" />

                </LinearLayout>

                <!-- 发送端口 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sendPortEditSetting"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg_white"
                        android:gravity="center"
                        android:hint="@string/input_send_port"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/sendPortConfirmBtnSetting"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/btn_normal"
                        android:text="@string/confirm"
                        android:textColor="@color/white" />

                </LinearLayout>

                <!-- 接收端口 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/receiverEditSetting"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg_white"
                        android:gravity="center"
                        android:hint="@string/input_receive_port"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/receiverConfirmBtnSetting"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/btn_normal"
                        android:text="@string/confirm"
                        android:textColor="@color/white" />

                </LinearLayout>

                <!-- 开启服务按钮 -->
                <Button
                    android:id="@+id/startOrStopReceiverServerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_white"
                    android:text="@string/start_receive_server"
                    android:textColor="@color/primary_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- setting block two -->
            <LinearLayout
                android:id="@+id/block_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/block_1"
                android:layout_marginTop="10dp"
                android:background="#9BCFBA"
                android:orientation="vertical">

                <!-- 添加广播接收器按钮 -->
                <LinearLayout
                    android:id="@+id/addBroadcastReceiverBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:paddingStart="20dp"
                        android:text="@string/add_broadcast_receiver"
                        android:textColor="@color/primary_blue"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_add" />

                </LinearLayout>

                <!-- 广播接收器列表 -->
                <com.kinsin.debug_udp_cat.views.ScrollListView
                    android:id="@+id/broadcastListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:scrollbars="none" />

            </LinearLayout>

            <!-- setting block three -->
            <LinearLayout
                android:id="@+id/block_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/block_2"
                android:layout_marginTop="10dp"
                android:background="#9BCFBA"
                android:orientation="vertical">

                <!-- charset spinner -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/btn_white" />

                    <Spinner
                        android:id="@+id/charSetChoose"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/set_send_data_charset"
                    android:textColor="@color/gray_ef"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#9BCFBA">

        <TextView
            android:id="@+id/showLocalIpv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>