<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_cat_white"/>

    <ImageView
        android:id="@+id/clearReceiverAreaBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_delete"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:elevation="2dp"/>

    <ImageView
        android:id="@+id/settingBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_setting"
        android:layout_below="@id/clearReceiverAreaBtn"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:elevation="2dp"/>

    <ImageView
        android:id="@+id/showServerRun"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_receiver_off"
        android:elevation="2dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/receiverArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@drawable/edit_bg_green"
            android:gravity="center|top"
            android:hint="@string/receive_area"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/receiverListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@drawable/edit_bg_green"
            android:padding="10dp"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <EditText
                android:id="@+id/sendArea"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_above="@+id/operateLayout"
                android:background="@drawable/edit_bg_pink"
                android:hint="@string/send_area"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/showIp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showSendPort"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/showIp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showReceiverPort"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/showSendPort"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/operateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/clearSendAreaBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_accept"
                    android:text="@string/clear"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="50dp" />

                <Button
                    android:id="@+id/sendBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_accept"
                    android:text="@string/send"
                    android:textColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>